--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Blog</h1>
 
-    {% for p in posts %}
+    {% for p in post_list %}  <!-- post_list 대신 posts 쓰면 FBV -->
         <hr/>
         <h2> <a href="{{ p.get_absolute_url }}"> {{ p.title }} </a> </h2>
         <h4> {{ p.created_at }} </h4>
