--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -21,13 +21,13 @@
                             {% if post.head_image %}
                                 <img class="img-fluid rounded" src="{{ post.head_image.url }}" alt="{{post.title}}의 head image" />
                             {% else %}
-                                <img class="img-fluid rounded" src="https://picsum.photos/seed/{{post.id}}/800/200" alt="random image" />
+                                <img class="img-fluid rounded" src="https://picsum.photos/seed/{{post.id}}/800/200" alt="random image" /> <!-- seed/{{post.id}} 없으면 모두 같은 이미지가 조회할 때마다 바뀜 -->
                             {% endif %}
                         </figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             <p> {{ post.content }} </p>
-                            {% if post.file_upload %}
+                            {% if post.file_upload %} <!-- 첨부 파일 다운로드 버튼 -->
                                 <a href="{{post.file_upload.url}}" class="btn btn-outline-dark" role="button" download>
                                     Download :
                                     {% if post.get_file_ext == 'xlsx' or post.get_file_ext == 'xls' %}
