--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,11 +13,11 @@
             {% endif %}
             <div class="card-body">
 
-                <h2 class="card-title h4">{{ p.title | upper }}</h2>
+                <h2 class="card-title h4">{{ p.title | upper }}</h2> <!-- lower : 소문자, upper : 대문자 -->
                 {% if p.hook_text %}
                     <h5 class="text-muted"> {{ p.hook_text }} </h5>
                 {% endif %}
-                <p class="card-text">{{ p.content | truncatechars:100 }}</p> <!-- truncatewords:45 -->
+                <p class="card-text">{{ p.content | truncatechars:100 }}</p> <!-- truncatewords:45 --> <!-- truncatewords : 단어 수, truncatechars : 글자 수 -->
                 <a class="btn btn-primary" href="{{ p.get_absolute_url }}">Read more →</a> <!-- 상세 페이지로 이동 -->
             </div>
             <div class="card-footer">
