--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,10 +7,10 @@
                     <div id="post-area">
                         <!-- Post header-->
                         <header class="mb-4">
-                            {% if post.category %}
-                                <span class="badge bg-secondary float=right">{{post.category}}</span>
+                            {% if post.category %} <!-- 카테고리 추가 -->
+                                <span class="badge bg-secondary float-right">{{post.category}}</span>
                             {% else %}
-                                <span class="badge bg-secondary float=right">미분류</span>
+                                <span class="badge bg-secondary float-right">미분류</span>
                             {% endif %}
                             <!-- Post title-->
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
@@ -18,9 +18,6 @@
                             <!-- Post meta content-->
                             <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at | date:"20y-m-d h:m:s" }} by
                                 {{ post.author | upper }}</div>
-                            <!-- Post categories-->
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Web Design</a>
-                            <a class="badge bg-secondary text-decoration-none link-light" href="#!">Freebies</a>
                         </header>
                         <!-- Preview image figure-->
                         <figure class="mb-4">
@@ -33,6 +30,13 @@
                         <!-- Post content-->
                         <section class="mb-5">
                             <p> {{ post.content }} </p>
+                            {% if post.tags.exists %} <!-- 태그 추가 -->
+                                <i class="fas fa-tags"></i> <!-- fontawesome에서 icon 추가 -->
+                                {% for tag in post.tags.all %}
+                                    <a href="tag.get_absolute_url"><span class="badge bg-light">{{tag}}</span></a>
+                                {% endfor %}
+                                <br/><br/>
+                            {% endif %}
                             {% if post.file_upload %} <!-- 첨부 파일 다운로드 버튼 -->
                                 <a href="{{post.file_upload.url}}" class="btn btn-outline-dark" role="button" download>
                                     Download :
