--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,8 +16,17 @@
                             <h1 class="fw-bolder mb-1">{{ post.title }}</h1>
                             <h5 class="text-muted"> {{ post.hook_text }}</h5>
                             <!-- Post meta content-->
-                            <div class="text-muted fst-italic mb-2">Posted on {{ post.created_at | date:"20y-m-d h:m:s" }} by
-                                {{ post.author | upper }}</div>
+                            <div class="text-muted fst-italic mb-2">
+                                Posted on {{ post.created_at | date:"20y-m-d h:m:s" }}
+                                by {{ post.author | upper }}
+                                {% if user.is_authenticated and user == post.author %} <!-- 로그인되어져 있고 post의 author인 경우에만 a 링크가 포함되게 조건문으로 넣어 주었다 -->
+                                    <a href="/blog/update_post/{{post.pk}}/"
+                                        class="btn btn-info btn-sm float-right">
+                                        <i class="fas fa-pen"></i>
+                                        Edit Post
+                                    </a>
+                                {% endif %}
+                            </div>
                         </header>
                         <!-- Preview image figure-->
                         <figure class="mb-4">
