포스트 작성/수정 태그 지정하기

--- a/blog/templates/blog/post_update_form.html
+++ b/blog/templates/blog/post_update_form.html
@@ -8,6 +8,10 @@
         {% csrf_token %} <!-- django인 경우, form에 대해서 csrf라고 하는 공격으로부터 보호해 준다 반드시 넣어 줘야 한다 -->
         <table>
             {{form}}
+            <tr>
+                <th><label for="id_tags_str">Tags:</label></th> <!-- label의 for는 input의 id와 연결되는 부분 -->
+                <td><input type="text" name="tags_str" maxlength="30" required id="id_tags_str" value="{{ tags_str_default }}"></td>
+            </tr>
         </table>
         <button type="submit" class="btn btn-primary float-right">Submit</button>
     </form>
