--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -15,7 +15,7 @@
         <div class="col-md-8 col-lg-9" id="main-area">
           {% block main_area %}
           {% endblock %}
-        </div>
+<!--        </div>  -->
 
         <div class="col-md-4 col-lg-3">
               <!-- Search widget-->
@@ -46,6 +46,7 @@
                   </div>
               </div>
         </div>
+        </div>    <!-- ? -->
       </div>
     </div>
 
