--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -38,7 +38,7 @@
                         </figure>
                         <!-- Post content-->
                         <section class="mb-5">
-                            <p> {{ post.content }} </p>
+                            <p> {{ post.get_content_markdown | safe }} </p> <!-- {{ post.content }} -> post.get_content_markdown -->
                             {% if post.tags.exists %} <!-- 태그 추가 -->
                                 <i class="fas fa-tags"></i> <!-- fontawesome에서 icon 추가 -->
                                 {% for tag in post.tags.all %}
