--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -22,6 +22,13 @@
             {% if user.is_authenticated %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {% if user.socialaccount_set.all.0.get_avatar_url %}  <!-- user.socialaccount_set.first도 괜찮다(user.socialaccount_set.all.0와 같다) -->
+                <img class="rounded-circle" width="25px"
+                     src="{{user.socialaccount_set.all.0.get_avatar_url}}">
+                {% else %}
+                <img class="rounded-circle" width="25px"
+                     src="https://doitdjango.com/avatar/id/388/92773eb7c5ee4554/svg/{{user.email}}/" >
+                {% endif %}
                 {{user.username}}
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
