--- a/single_pages/templates/single_pages/landing.html
+++ b/single_pages/templates/single_pages/landing.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>덕성여자대학교 인터넷프로그래밍</title>
+    <link href="{% static 'blog/bootstrap/bootstrap.min.css' %}" rel="stylesheet" type="text/css" media="screen">
+    <link href="{% static 'single_pages/css/landing.css' %}" rel="stylesheet" type="text/css" media="screen">
+    <script src="https://kit.fontawesome.com/96e208bb9a.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-<nav>
-    <a href="/blog/">Blog</a>
-    <a href="/about_me/">About Me</a>
-</nav>
+{% include 'blog/navbar.html' %}
 
-<h1> 덕성여자대학교 인터넷프로그래밍입니다.</h1>
-<h2> 대문 페이지</h2>
-<h3> 아직 공사 중입니다. </h3>
+<section>
+    <div class="container">
+        <div class="row justify-content-between"> <!-- justify-content-between : 양쪽정렬 - 전체 12 개 중에서 6 개와 5 개를 사용하고 있으므로 하나 남아있는 것까지 다 채워서 전체를 하나의 줄을 채우겠다 - 6 개로 되어져 있는 div 태그와 5 개로 되어져 있는 div 태그 사이에 자동으로 하나의 비어져 있는 칸이 들어간다 -->
+            <div class="col-lg-6 text-light"> <!-- text-light : 밝은 색 -->
+                <h1 class="mt-5">인터넷프로그래밍</h1>
+                <p>2021학년도 2학기 인터넷프로그래밍 강의 홈페이지입니다. 부트스트랩과 장고를 이용하여 여러분만의 웹 사이트를 만들어보세요.</p>
+            </div>
+            <div class="col-lg-5">
+                <h2 class="text-light">Blog - Recent posts</h2>
+                {% for post in recent_posts %}
+                <div class="card mt-1">
+                    <div class="card-body">
+                        <h6><a href="{{post.get_absolute_url}}" class="text-decoration-none text-dark">{{post.title}}</a></h6> <!-- class="text-decoration-none" : 링크에 대한 데코레이션을 하지 않는다(보통 링크를 걸면 파란색 글씨에 밑줄 그어진 형태가 되므로 이를 일반적인 텍스트 문장처럼 출력하기 위해) -->
+                        <span class="badge bg-light text-dark float-right">
+                            <img class="rounded-circle mr-1" width="20px"
+                                 src="{{post.get_avatar_url}}" alt="{{post.author}}">
+                            {{post.author.username}}
+                            &nbsp;&nbsp;
+                            {{post.created_at}}
+                        </span>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
+
+<div class="fixed-bottom"> <!-- footer 하단에 고정 -->
+    {% include 'blog/footer.html' %}
+</div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 
 </body>
 </html>
